Closed Bug 1241665 Opened 9 years ago Closed 9 years ago

MacIOSurfaceTextureSourceBasic needs to handle video formats

Categories

(Core :: Graphics: Layers, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla46
Tracking Status
firefox45 --- fixed
firefox46 --- fixed

People

(Reporter: mstange, Assigned: mstange)

References

Details

Attachments

(2 files)

MacIOSurfaceTextureSourceBasic::GetSurface calls MacIOSurface::GetAsSurface which doesn't handle video formats and creates bad surfaces.
Ideally this would live in gfx/2d/MacIOSurface.cpp, but we don't have access to the YCbCr conversion utilities in Moz2D. Review commit: https://reviewboard.mozilla.org/r/31847/diff/#index_header See other reviews: https://reviewboard.mozilla.org/r/31847/
Attachment #8710721 - Flags: review?(matt.woodrow)
Comment on attachment 8710721 [details] MozReview Request: Bug 1241665 - Move IOSurface YCbCr conversion code to a new file MacIOSurfaceHelpers.cpp. r?mattwoodrow https://reviewboard.mozilla.org/r/31847/#review28577
Attachment #8710721 - Flags: review?(matt.woodrow) → review+
Attachment #8710722 - Flags: review?(matt.woodrow) → review+
Comment on attachment 8710722 [details] MozReview Request: Bug 1241665 - Correctly convert IOSurfaces to SourceSurfaces in MacIOSurfaceTextureSourceBasic and MacIOSurfaceTextureData. r?mattwoodrow https://reviewboard.mozilla.org/r/31849/#review28581
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla46
Markus, we need this patch to be uplifted to 45 to be able to land bug 1187322? Could you take care of the uplift request? Thanks
Flags: needinfo?(mstange)
Comment on attachment 8710721 [details] MozReview Request: Bug 1241665 - Move IOSurface YCbCr conversion code to a new file MacIOSurfaceHelpers.cpp. r?mattwoodrow Approval Request Comment [Feature/regressing bug #]: BasicCompositor on OS X [User impact if declined]: crashes and no video when hardware acceleration is off [Describe test coverage new/current, TreeHerder]: none (we don't run any tests with hardware acceleration disabled on OS X) [Risks and why]: very low, just makes us use proven conversion code in more places [String/UUID change made/needed]: none
Flags: needinfo?(mstange)
Attachment #8710721 - Flags: approval-mozilla-aurora?
Attachment #8710722 - Flags: approval-mozilla-aurora?
Comment on attachment 8710721 [details] MozReview Request: Bug 1241665 - Move IOSurface YCbCr conversion code to a new file MacIOSurfaceHelpers.cpp. r?mattwoodrow That was fast, thanks! Taking it as it fixes crashes.
Attachment #8710721 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Attachment #8710722 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: